<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:logo="@drawable/back"
        app:title="@string/detail_travel"
        app:titleMarginStart="32dp"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:subtitleTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/CardView.Dark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideInset">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/travelDetailImg"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/travel_img_thumbnail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/travelDetailName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/travel_title"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.AppCompat.Headline"/>

                    <TextView
                        android:id="@+id/travelDetailLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/travel_title"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.AppCompat.Body2"/>

                    <TextView
                        android:id="@+id/travelDetailDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/travel_title"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.AppCompat.Body2"/>

                    <TextView
                        android:id="@+id/travelDetailOpenTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/travel_title"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.AppCompat.Body2"/>

                    <TextView
                        android:id="@+id/travelDetailPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/travel_title"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.AppCompat.Body2"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>